--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
 <body>
 	<div class="container" style="margin-top: 40px;">
+	<div ng-app="App">
+	<div ng-controller="MainController">
 		 <div class="row"> 
             <div class="col-md-6">
                 <ul class="nav nav-tabs">
@@ -321,6 +323,8 @@
 </div>
 
 
+
+
 <footer>
 	<div class="container">
 		<div class="row">
@@ -334,5 +338,7 @@
 <script src="js/controller.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</div>
+</div>
 </body>
 </html>
