--- a/index.html
+++ b/index.html
@@ -94,56 +94,68 @@
 
             <!-- Popup box for Persons -->
             <div class="container">
-                <div class="modal" id="modal-2" tabindex="-1" role="dialog">
+                <div class="modal" id="dialog-edit-person" tabindex="-1" role="dialog">
                     <div class="modal-dialog">
                         <div class="modal-content">
                             <div class="modal-header">
                                 <button class="close" data-dismiss="modal">&times;</button>
-                                <h3 class="modal-title">Edit person</h3>
+                                <h3 class="modal-title">Edit person / Add Car to Person</h3>
                             </div>
 
-                            <form>
-                                <div class="form-group">
-                                    <label for="InputName">Name</label>
-                                    <input type="text" class="form-control " id="InputName" placeholder="Name">
-                                </div><br />
-                                <div class="form-group">
-                                    <label for="exampleInputName2">First Name</label>
-                                    <input type="text" class="form-control" id="InputName" placeholder="First Name">
-                                </div><br />
-                                <div class="form-group">
-                                    <label for="InputName3">Second Name</label>
-                                    <input type="text" class="form-control" id="InputName3" placeholder="Second Name">
-                                </div><br />
-                                <div class="form-group">
-                                    <label for="InputBirth">Birth date</label>
-                                    <input type="text" class="form-control" id="InputBirth" placeholder="Birth date">
-                                </div>
-                            </form>
-                            <form class="form-group">
-                                <h3>Register a car</h3>
-                                <div class="form-group">
-                                    <label for="InputBrand">Brand</label>
-                                    <input type="text" class="form-control" id="InputBrand" placeholder="Brand">
-                                </div>
-                                <div class="form-group">
-                                    <label for="InputNModel">Model </label>
-                                    <input type="text" class="form-control" id="InputModel" placeholder="Model">
-                                </div>
-                                <div class="form-group">
-                                    <label for="InputYear">Year</label>
-                                    <input type="text" class="form-control" id="InputYear" placeholder="Year">
-                                </div>
-                                <div class="form-group">
-                                    <label for="InputColor">Color</label>
-                                    <input type="text" class="form-control" id="InputColor" placeholder="Color">
-                                </div>
-                            </form>
-                            <div class="modal-footer">
-                                <a href="" class="btn btn-primary" data-dismiss="modal">Close</a>
-                                <a href="" class="btn btn-danger" data-dismiss="modal">Save</a>
-                            </div>
-                        </div>
+                            <div class="modal-body">
+	                            <form ng-submit="updatePerson(selectedPerson)">
+	                                <div class="form-group">
+	                                    <h3>Edit Person</h3>
+	                                </div>
+	                               	<div class="form-group">    
+	                                	<label>Name</label>
+	                                    <input type="text" class="form-control" placeholder="Name" ng-model="selectedPerson.name">
+	                                </div><br />
+	                                <div class="form-group">
+	                                    <label>First Name</label>
+	                                    <input type="text" class="form-control" placeholder="First Name" ng-model="selectedPerson.firstName">
+	                                </div><br />
+	                                <div class="form-group">
+	                                    <label>Second Name</label>
+	                                    <input type="text" class="form-control" placeholder="Last Name" ng-model="selectedPerson.lastName">
+	                                </div><br />
+	                                <div class="form-group">
+	                                    <label>Birth date</label>
+	                                    <input type="text" class="form-control" placeholder="Birth date" ng-model="selectedPerson.birthday">
+	                                </div>
+
+	                                <div class="form-group">
+										<div class="pull-right">
+											<button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+											<button type="submit" class="btn btn-danger">Update</button>
+										</div>
+									</div>
+	                            </form>
+	                            
+	                            <form class="form-group">
+	                                <h3>Register a car</h3>
+	                                <div class="form-group">
+	                                    <label for="InputBrand">Brand</label>
+	                                    <input type="text" class="form-control" id="InputBrand" placeholder="Brand">
+	                                </div>
+	                                <div class="form-group">
+	                                    <label for="InputNModel">Model </label>
+	                                    <input type="text" class="form-control" id="InputModel" placeholder="Model">
+	                                </div>
+	                                <div class="form-group">
+	                                    <label for="InputYear">Year</label>
+	                                    <input type="text" class="form-control" id="InputYear" placeholder="Year">
+	                                </div>
+	                                <div class="form-group">
+	                                    <label for="InputColor">Color</label>
+	                                    <input type="text" class="form-control" id="InputColor" placeholder="Color">
+	                                </div>
+	                            </form>
+	                            <div class="modal-footer">
+	                                <a href="" class="btn btn-primary" data-dismiss="modal">Close</a>
+	                                <a href="" class="btn btn-danger" data-dismiss="modal">Save</a>
+	                            </div>
+	                        </div>
                     </div>
                 </div>
             </div>
